force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Analyst__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required and user updated. The user that is analyzing this period.</description>
    <label>Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Spread_Statement_Period</relationshipName>
    <type>Lookup</type>
</CustomField>