force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Collateral_Column_Title__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Column_Title__c</fullName>
    <description>When a user creates a new NOI statement in the CRE Analysis application, they will see these picklist values in the “Collateral Column Title” field picklist. The value selected in this field is displayed in the collateral column header.</description>
    <label>Collateral Column Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>At Stabilization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>