force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Column_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Column_Number__c</fullName>
    <label>-D Column Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>