force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Debt_Schedule__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Debt_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field represents the link between the Debt Schedule object and the Spread Statement Period object.</description>
    <label>Debt Schedule</label>
    <referenceTo>LLC_BI__Debt_Schedule__c</referenceTo>
    <relationshipLabel>Spread Statement Periods</relationshipLabel>
    <relationshipName>Spread_Statement_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>