force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__External_Data_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_Data_Source_Id__c</fullName>
    <description>The system automatically populates this text field with the unique identifier that represents the data that was used to populate this period when a period is created programmatically from a source other than Spreads. This value is used when the system communicates back to the application that populated the period values. By default, it is blank.</description>
    <label>External Data Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>