force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__External_Period_Key__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_Period_Key__c</fullName>
    <description>The system automatically populates this optional text field with the unique identifier of a period from an external source. By default, it is blank.</description>
    <label>External Period Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>