force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Fiscal_Year_TTM_Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fiscal_Year_TTM_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The full fiscal year period to be used in a trailing twelve month calculation.</description>
    <label>Fiscal Year TTM Period</label>
    <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
    <relationshipLabel>Fiscal Year Spread Statement Periods</relationshipLabel>
    <relationshipName>Fiscal_Year_Spread_Statement_Period</relationshipName>
    <type>Lookup</type>
</CustomField>