force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Is_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Fiscal_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is populated automatically, but can be altered by user selection within the spreading application. This field indicates whether a spread statement period is a fiscal year. When true, the spread statement period is a fiscal year. When false, the spread statement period is not a fiscal year. By default, this is enabled when the number of months is 12 and the statement date month matches the month set in &quot;Fiscal_Year_End&quot; field onthe Account object.</description>
    <label>Is Fiscal Year</label>
    <type>Checkbox</type>
</CustomField>