force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Is_Flex_Enabled_Debt_Schedule__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Flex_Enabled_Debt_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this optional boolean field with true or false for the specified period. When true and if the formula meets the data loaded Spreads Debt Schedule formula, FLEX calculations will be done for the Debt Schedule Spread Statement Records. Never manually adjust this field unless manual intervention is needed. By default, it is false.</description>
    <label>Is Flex Enabled Debt Schedule</label>
    <type>Checkbox</type>
</CustomField>