force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__lookupKey__c</fullName>
    <description>Field Deprecated.  Replaced by externalLookup_Key__c.</description>
    <label>-D lookupKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>