force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Month__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Month__c</fullName>
    <description>This field is required. It is populated automatically. It is the month of the statement date selected.</description>
    <label>Month</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>