force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Name_Override__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Name_Override__c</fullName>
    <description>Users populate this optional text field to capture information related to the current Spreads Period, NOI Period, or Rent Roll. By default, the system includes the field in the Rent Roll Details, Add Rent Roll, and Edit Rent Roll modals.</description>
    <inlineHelpText>The name override of the column. If this value is set the application will display it instead of the month &amp; year.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>