force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Number_of_Periods__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Number_of_Periods__c</fullName>
    <description>This field is required and user updated. Number of periods included in this period column.</description>
    <label>Number of Periods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>