force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Period_Key__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Period_Key__c</fullName>
    <description>This field is optional and automatically updated. The Period_Key is used to identify matching periods between statements and when calculating period over period change for linked records.</description>
    <formula>TEXT(LLC_BI__Year__c)  &amp; &apos;_&apos; &amp; LPAD(TEXT(LLC_BI__Month__c),2,&apos;0&apos;) &amp; &apos;_&apos; &amp; LPAD(TEXT(LLC_BI__Number_of_Periods__c),2,&apos;0&apos;) &amp; &apos;m_&apos; &amp; SUBSTITUTE(SUBSTITUTE(UPPER(TEXT(LLC_BI__Source__c)), &apos; &apos;, &apos;&apos;), &apos;.&apos;, &apos;&apos;)</formula>
    <label>Period Key</label>
    <type>Text</type>
</CustomField>