force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Project_from_Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Project_from_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Users populate this required picklist field with the period, and source to start projecting from. By default, the most recent 12 month fiscal year period displays.</description>
    <label>Project from Period</label>
    <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
    <relationshipLabel>Spread Statement Period (Project from Period)</relationshipLabel>
    <relationshipName>Spread_Statement_Period</relationshipName>
    <type>Lookup</type>
</CustomField>