force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Source__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Source__c</fullName>
    <description>This field is required. It is driven by user selection within the spreading application. It indicates the document that provides the financial information.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tax Return</fullName>
            </value>
            <value>
                <fullName>CPA Audit</fullName>
            </value>
            <value>
                <fullName>CPA Review</fullName>
            </value>
            <value>
                <fullName>CPA Compiled</fullName>
            </value>
            <value>
                <fullName>Comp. Prep</fullName>
            </value>
            <value>
                <fullName>Projected</fullName>
            </value>
            <value>
                <fullName>PFS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>