force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Source_Currency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Source_Currency__c</fullName>
    <description>Users populate this optional picklist to indicate the exchange rate between the source currency and the converted values. By default, it is blank.</description>
    <label>Source Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LLC_BI__Currency_Codes</valueSetName>
    </valueSet>
</CustomField>