force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Spread_Projections_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Projections_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This required lookup field looks up to the Spread Projections Template object.</description>
    <label>Spread Projections Template</label>
    <referenceTo>LLC_BI__Spread_Projections_Template__c</referenceTo>
    <relationshipLabel>Spread Statement Periods</relationshipLabel>
    <relationshipName>Spread_Statement_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>