force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Spread_Statement_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Statement_Type__c</fullName>
    <description>This field is required. It is populated automatically whenever a spread statement period is created within the spreading application. This field specifies the Spread Statement Template associated with the Spread Statement Period.</description>
    <label>Spread Statement Type</label>
    <referenceTo>LLC_BI__Spread_Statement_Type__c</referenceTo>
    <relationshipLabel>Spread Statement Period</relationshipLabel>
    <relationshipName>Spread_Statement_Period</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>