force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Trailing_Interim_TTM_Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Trailing_Interim_TTM_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The latest interim period to be used in a trailing twelve month calculation.</description>
    <label>Trailing Interim TTM Period</label>
    <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
    <relationshipLabel>Trailing_Interim_TTM_Spread Statement Periods</relationshipLabel>
    <relationshipName>Trailing_Interim_Spread_Statement_Period</relationshipName>
    <type>Lookup</type>
</CustomField>