force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Unmapped_Values__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Unmapped_Values__c</fullName>
    <description>The system populates this long text field with incoming Spreads values passed to the Credit Analysis integration endpoint and serves as a temporary data storage mechanism. The system stores the Spreads values until users map all pending fields.</description>
    <label>Unmapped Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>