force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Year__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Year__c</fullName>
    <description>This field is required. This field is populated automatically. It is the year of the statement date selected.</description>
    <label>Year</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>